<resources>
    <string name="app_name">期末任务</string>
    <string name="edt_phone">请输入手机号</string>
    <string name="edt_password">请输入密码</string>
    <string name="text_goto_register">开始注册</string>
    <string name="text_login">欢迎登录</string>
    <string name="text_register">欢迎注册</string>
    <string name="text_phone">手机号:</string>
    <string name="text_password">密码:</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <dimen name="background_radius">50dp</dimen>
    <dimen name="edt_text_size">15sp</dimen>
    <dimen name="title_text_size">30sp</dimen>
    <dimen name="margin">5dp</dimen>
    <dimen name="item_product_pic_width">300px</dimen>
    <dimen name="item_product_pic_height">300px</dimen>
    <dimen name="item_product_text_size_big">25sp</dimen>
    <dimen name="item_product_text_size_small">15sp</dimen>
    <dimen name="item_order_text_size_big">25sp</dimen>
    <dimen name="item_order_text_size_small">15sp</dimen>
    <dimen name="item_order_item_height">100dp</dimen>
    <dimen name="item_order_item_padding">3dp</dimen>
    <dimen name="order_item_detail_text_size_big">15sp</dimen>
    <dimen name="order_item_detail_text_size_small">20sp</dimen>
    <dimen name="order_item_detail_content">80dp</dimen>
    <dimen name="order_item_detail_content_price">40dp</dimen>
    <dimen name="border_width">2px</dimen>
    <dimen name="user_Icon_size_big">150dp</dimen>
    <dimen name="user_Icon_size_small">30dp</dimen>
    <dimen name="user_text_size_big">30sp</dimen>
    <dimen name="user_text_size_small">20sp</dimen>
    <integer name="text_weight">1</integer>
    <integer name="edt_weight">4</integer>
    <integer name="grid_column">2</integer>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>