<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/login_register_border">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin"
            android:textStyle="bold"/>
        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <LinearLayout
                android:id="@+id/rl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_register_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_phone"
                    android:textColor="@color/black"
                    android:layout_weight="@integer/text_weight"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/edt_register_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/edt_weight"
                    android:layout_margin="@dimen/margin"
                    android:hint="@string/edt_phone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edt_text_size" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_phone"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/text_weight"
                    android:text="@string/text_password"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/edt_register_password"
                    android:layout_width="0dp"
                    android:layout_weight="@integer/edt_weight"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/edt_text_size"
                    android:textColor="@color/black"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rl_register"
            android:layout_margin="@dimen/margin"/>

    </RelativeLayout>
</LinearLayout>